<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.UserProfileFragment">
    <CheckBox
            android:text="Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chk_edit" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_first_name"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintDimensionRatio="" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/edit_last_name" android:hint="@string/first_name"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/chk_edit"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:hint="@string/last_name"
            android:id="@+id/edit_last_name" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/edit_first_name" android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="@+id/edit_first_name"/>
    <com.hbb20.CountryCodePicker android:id="@+id/ccp_edit"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                                 app:layout_constraintTop_toBottomOf="@id/edit_first_name" android:layout_marginTop="20dp"
                                 app:layout_constraintEnd_toStartOf="@id/txv_edit_mobilenumber"
                                 android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:ems="10"
            android:id="@+id/txv_edit_mobilenumber"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_last_name" android:hint="@string/mobile_number"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txv_edit_email" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_edit_mobilenumber" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:hint="@string/email"/>
    <Button
            android:text="@string/update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@drawable/button_signup"
            android:textColor="@color/white" android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>