<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".view.RegistrationFragment">


    <Button
            android:id="@+id/btn_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_facebook"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="10dp"
            android:text="@string/facebook"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/btn_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <Button
            android:id="@+id/btn_google"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_google_plus"
            android:drawableStart="@drawable/ic_google_plus"
            android:paddingLeft="10dp"
            android:text="@string/google"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_facebook"
            app:layout_constraintTop_toTopOf="parent" />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_firstname"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/txv_lastname"
            android:hint="@string/first_name"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txv_lastname" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_google" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/txv_firstname"
            android:layout_marginStart="8dp" android:hint="@string/last_name"/>

    <com.hbb20.CountryCodePicker android:id="@+id/ccp"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                                 app:layout_constraintTop_toBottomOf="@id/txv_firstname" android:layout_marginTop="20dp"
                                 app:layout_constraintEnd_toStartOf="@id/txv_mobilenumber"
                                 android:layout_marginEnd="16dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10"
            android:ems="10"
            android:id="@+id/txv_mobilenumber"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_lastname" android:hint="@string/mobile_number"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txv_email" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_mobilenumber" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:hint="@string/email"/>
    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_email">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/txv_password"
                android:layout_marginEnd="8dp"
                android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_signup"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_input_password" />

    <TextView
            android:id="@+id/txv_terms_and_condition"
            style="@style/style_body_title_h1_regular_grey_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="By signing up, you agree to our Terms of Use and Privacy Policy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <TextView
            android:id="@+id/txv_login_registration"
            style="@style/style_body_title_h1_regular_grey_small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="If already sign up, please login here."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txv_terms_and_condition" />

</androidx.constraintlayout.widget.ConstraintLayout>