<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".view.FreeHoroscopeFragment">

    <TextView android:id="@+id/txv_horoscope_birth_date" android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:text="@string/birth_date"
              style="@style/style_body_title_h1_regular_medium"/>

    <TextView
            android:id="@+id/txv_horoscope_birth_date_val"
            style="@style/style_body_title_h1_regular_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/ic_calendar"
            android:drawablePadding="5dp"
            android:text="@string/dd_mm_yyyy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/txv_horoscope_birth_date"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/txv_horoscope_birth_time" android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@+id/txv_horoscope_birth_date"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="24dp" android:layout_marginStart="16dp" android:text="@string/birth_time"
              style="@style/style_body_title_h1_regular_medium"/>

    <TextView
            android:id="@+id/txv_horoscope_birth_time_val"
            style="@style/style_body_title_h1_regular_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/ic_clock_regular"
            android:drawablePadding="5dp"
            android:text="@string/hh_mm_ss"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txv_horoscope_birth_date_val"
            app:layout_constraintTop_toBottomOf="@+id/txv_horoscope_birth_date_val" />
    <Button
            android:text="@string/submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_horoscope_submit" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:background="@drawable/button_signup" android:textColor="@color/white"/>
    <TextView
            android:text="@string/place_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txv_place_horoscope" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txv_horoscope_birth_time"
            style="@style/style_body_title_h1_regular_medium"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ed_place"
            app:layout_constraintStart_toEndOf="@+id/txv_place_horoscope" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txv_horoscope_birth_time_val"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>